# stream-it-ai-classified

./: .gitignore  Makefile  README.md  uv-install.ps1
backend/: .pyre_configuration  Dockerfile  Dockerfile.agent  agent.py  pyproject.toml  requirements-agent.txt  requirements.txt  server.py  test_agent.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: CoachingPanel.jsx  LobbyScreen.jsx  QuestionCard.jsx  ReportCard.jsx  SessionScreen.jsx  StatsBar.jsx
frontend/src/lib/: Statsextractor.js
